prevent horizontal scroll in document; fix a markup syntax error

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
 	font-size: 32pt;
 	font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 /** Coordinated HTML and SVG layers. */
